overflow of text for small screens fixed

--- a/css/changePassword.css
+++ b/css/changePassword.css
@@ -27,6 +27,7 @@ body {
   margin: 0 0 1em 0;
   padding: 0;
   color: white;
+  overflow-x: hidden;
 }
 
 .card-detail {
